
PIG-3413: JsonLoader fails the pig job in case of malformed json input (eyal via daijy)

PIG-4247: S3 properties are not picked up from core-site.xml in local mode (cheolsoo)

PIG-4242: For indented xmls with multiline content (e.g. wikipedia) XMLLoader cuts out the begining of every line
 (holdfenytolvaj via daijy)

Release 0.14.1 - Unreleased

INCOMPATIBLE CHANGES

IMPROVEMENTS

BUG FIXES

PIG-4375: ObjectCache should use ProcessorContext.getObjectRegistry() (rohini)

PIG-4334: PigProcessor does not set pig.datetime.default.tz (rohini)

PIG-4342: Pig 0.14 cannot identify the uppercase of DECLARE and DEFAULT (daijy)

Release 0.14.0
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4321: Documentation for 0.14 (daijy)

PIG-4328: Upgrade Hive to 0.14 (daijy)

PIG-4318: Make PigConfiguration naming consistent (rohini)

PIG-4316: Port TestHBaseStorage to tez local mode (rohini)

PIG-4224: Upload Tez payload history string to timeline server (daijy)

PIG-3977: Get TezStats working for Oozie (rohini)

PIG-3979: group all performance, garbage collection, and incremental aggregation (rohini)

PIG-4253: Add a UniqueID UDF (daijy)

PIG-4160: Provide a way to pass local jars in pig.additional.jars when using a remote
 url for a script (acoliver via daijy)

PIG-4246: HBaseStorage should implement getShipFiles (rohini)

PIG-3456: Reduce threadlocal conf access in backend for each record (rohini)

PIG-3861: duplicate jars get added to distributed cache (chitnis via rohini)

PIG-4039: New interface for resetting static variables for jvm reuse (rohini)

PIG-3870: STRSPLITTOBAG UDF (cryptoe via daijy)

PIG-4080: Add Preprocessor commands and more to the black/whitelisting feature (prkommireddi via daijy)

PIG-4162: Intermediate reducer parallelism in Tez should be higher (rohini)

PIG-4186: Fix e2e run against new build of pig and some enhancements (rohini)

PIG-3838: Organize tez code into subpackages (rohini)
